dark mode minor fix

--- a/src/components/cards/LoginCard/LoginCard.module.css
+++ b/src/components/cards/LoginCard/LoginCard.module.css
@@ -90,7 +90,6 @@
 
 @media (max-width: 575px) {
     .LoginCard {
-        background-color: var(--color-white) !important;
         padding: 30px;
         text-align: left;
         box-sizing: border-box;
@@ -99,7 +98,6 @@
     }
     
     .LoginCard h3{
-        color: var(--color-dark-gray);
         font-size: 22px;
         margin: 0;
         margin-bottom: 20px;
@@ -107,14 +105,12 @@
     }
     
     .LoginCard button{
-        background-color: var(--color-dark-gray);
         width: 230px;
         height: 50px;
         border: 0;
         border-radius: var(--border-radius-md);
         font-size: 14px;
         font-weight: 800;
-        color: var(--color-white);
         cursor: pointer;
         transition: var(--transition-02);
         position: relative;
