--- a/src/routes/Landing/Landing.module.css
+++ b/src/routes/Landing/Landing.module.css
@@ -83,6 +83,16 @@ body, html {
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1bd760', endColorstr='#f5f5f5',GradientType=1 );
     }
 
+    @media (prefers-color-scheme: dark) and (max-width: 1248px) {
+        .Landing {
+            background: #1bd760;
+            background: -moz-linear-gradient(top, #1bd760 1%, #1bd760 50%, #121212 50%, #121212 100%);
+            background: -webkit-linear-gradient(top, #1bd760 1%,#1bd760 50%,#121212 50%,#121212 100%);
+            background: linear-gradient(to bottom, #1bd760 1%,#1bd760 50%,#121212 50%,#121212 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1bd760', endColorstr='#121212',GradientType=1 );
+        }
+    }
+
     .leftPane, .rightPane {
         width: 100%;
         height: 100%;
